--- a/src/components/Jumbotron/jumbotron.scss
+++ b/src/components/Jumbotron/jumbotron.scss
@@ -8,22 +8,6 @@
   transform: translate(-50%, -50%);
 }
 
-@mixin aspect-ratio($width, $height) {
-  position: relative;
-  &:before {
-    display: block;
-    content: "";
-    width: 100%;
-    padding-top: ($height / $width) * 100%;
-  }
-  > .content {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-  }
-}
 
 #header {
     position: relative;
@@ -43,15 +27,32 @@
         }
     }
 
-    video {
-      filter: blur(5px) brightness(0.5);
-      top: 0;
-      left: 0;
-      min-width: 100%;
-      min-height: 90%;
-      max-height: 90%;
-      width: 100vw;
-      object-fit: cover;
+    .header-home{
+        background-color: $licorice;
+        z-index: -2;
+        min-width: 100%;
+        min-height: 90%;
+        max-height: 90%;
+        height: 90vh;
+        width: 100vw;
+        img{
+            filter: blur(2px) brightness(0.9);
+            min-height:100%;
+            width: 100%;
+            object-fit: cover;
+            z-index: 1;
+        }
+
+        video {
+          filter: blur(5px) brightness(0.5);
+          top: 0;
+          left: 0;
+          min-width: 100%;
+          min-height: 100%;
+          max-height: 100%;
+          width: 100vw;
+          object-fit: cover;
+        }
     }
 
 }
@@ -66,8 +67,6 @@
         max-height:90%;
         max-width: 100%;
     }
-
-    
 
     >p{
       font-family: "Bebas Neue", "Helvetica", "Arial";
