--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -16,6 +16,7 @@ $light-grey: #e4e4e4;
 // Layout
 $header-height: 380px;
 $footer-max-height: 128px;
+$mobile-edge: 1em; 
 
 // Animation
 $transition-duration: 300ms;
