--- a/src/components/PagePreview/preview.scss
+++ b/src/components/PagePreview/preview.scss
@@ -1,2 +1,45 @@
 @import '../../styles/_variables';
 
+a ~ h1:hover,h2:hover {
+  text-decoration: underline;
+}
+
+.ingress:hover {
+  text-decoration: none;
+}
+
+.newsitem {
+	margin: 1em 0em; 
+    padding-bottom: 5px;
+}
+
+.newsitem.regular {	
+    img {
+		margin: 0em 1em 0em 0em;
+        width: 225px;
+        max-height: 135px;
+    }
+}
+
+
+.newsitem.featured {
+    img {
+        width: 100%;
+        height: 400px;
+        object-fit: cover;
+    }
+}
+
+
+
+@media screen and (max-width: $breakpoint-mobile) {
+	.preview-content {
+		margin: 1em $mobile-edge;
+	}
+
+	.newsitem.regular > img {
+		margin: 0em;
+		width:100%;
+		height: auto;
+	}
+}
