--- a/src/components/PagePreview/preview.scss
+++ b/src/components/PagePreview/preview.scss
@@ -4,16 +4,20 @@ a ~ h1:hover,h2:hover {
   text-decoration: underline;
 }
 
+.ingress {
+    margin-top: 1em 0em;
+}
+
 .ingress:hover {
   text-decoration: none;
 }
 
 .newsitem {
-	margin: 1em 0em; 
     padding-bottom: 5px;
 }
 
 .newsitem.regular {	
+	margin: 2em 0em;
     img {
 		margin: 0em 1em 0em 0em;
         width: 225px;
@@ -23,7 +27,14 @@ a ~ h1:hover,h2:hover {
 
 
 .newsitem.featured {
+
+	.preview-content {
+		margin-bottom: 3em;
+	}
+
     img {
+		margin-top: 4em;
+		margin-bottom: 1em;
         width: 100%;
         height: 400px;
         object-fit: cover;
@@ -32,14 +43,18 @@ a ~ h1:hover,h2:hover {
 
 
 
+
 @media screen and (max-width: $breakpoint-mobile) {
 	.preview-content {
 		margin: 1em $mobile-edge;
 	}
 
-	.newsitem.regular > img {
-		margin: 0em;
-		width:100%;
-		height: auto;
+	.newsitem.regular {
+		margin: 1em 0em;  
+		img {
+			margin: 0em;
+			width:100%;
+			height: auto;
+		}
 	}
 }
