--- a/src/layouts/News/news.scss
+++ b/src/layouts/News/news.scss
@@ -8,9 +8,17 @@
 }
 
 .newsarticle {
-    margin-top: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    width: 70%;
     img {
         width: 100%;
     }
 }
 
+.rightpane {
+    width: 20%;
+    min-width: 200px;
+    margin-top: 20px;
+    border: 1px solid;
+}
