--- a/src/layouts/News/news.scss
+++ b/src/layouts/News/news.scss
@@ -2,34 +2,22 @@
 @import '../../styles/_variables';
 
 .newspage {
-    padding-bottom: 50px;
-    padding-left: 100px;
-    padding-right: 100px;
     max-width: 850px;
     margin: auto;
-    padding: 50px;
 }
 
 .newsarticle {
-    padding-left: 20px;
-    padding-right: 20px;
     img {
         width: 100%;
     }
     .ingress {
         font-size: 0.8em;
-        padding: 20px;
+        margin: 20px;
         text-align: justify;
         font-style: italic;
     }
 }
 
-.rightpane {
-    width: 20%;
-    min-width: 200px;
-    margin-top: 20px;
-    border: 1px solid;
-}
 
 .signature {
     display: inline-block;
