--- a/src/components/PagePreview/preview.scss
+++ b/src/components/PagePreview/preview.scss
@@ -22,8 +22,8 @@
 	margin: 2em 0em;
     img {
 		margin: 0em 1em 0em 0em;
-        width: 225px;
-        max-height: 135px;
+        width: 300px;
+        max-height: 180px;
     }
 }
 
@@ -46,14 +46,15 @@
 
 
 
-@media screen and (max-width: $breakpoint-mobile) {
+@media screen and (max-width: 800px) {
 
 	.newsitem.regular {
+        text-align: center;
 		margin: 1em 0em;  
 		img {
 			margin: 0em;
-			width:100%;
 			height: auto;
+            border-radius: 100%;
 		}
 	}
 }
