--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -86,6 +86,7 @@ h1, h2, h3, h4, h5, h6 {
         font-family: $font-title;
         color: $melon;
         letter-spacing: 1.1px;
+        text-transform: uppercase;
 }
 
 time {
