--- a/src/components/Jumbotron/jumbotron.scss
+++ b/src/components/Jumbotron/jumbotron.scss
@@ -22,7 +22,7 @@
             filter: blur(2px) brightness(0.9);
             width: 100%;
             height: $header-height;
-            object-fit: cover;
+            object-fit: fill;
             z-index: 1;
         }
     }
@@ -51,7 +51,7 @@
           min-height: 100%;
           max-height: 100%;
           width: 100vw;
-          object-fit: cover;
+          object-fit: fill;
         }
     }
 
