--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,6 +1,13 @@
 @import "variables";
 @import "fonts";
 
+html{
+    margin:0;
+    width:100%;
+    height:100%;
+    padding:0;
+}
+
 .dark-theme{
     background-color: $licorice;
     .title {
@@ -95,12 +102,12 @@ time {
 }
 
 h1 {
-  font-size: 3em;
+  font-size: 2.8em;
   line-height: 1.25em;
 }
 
 h2 {
-  font-size: 2.25em;
+  font-size: 2.0em;
   line-height: 1.25em;  
 }
 
