--- a/src/components/PagePreview/preview.scss
+++ b/src/components/PagePreview/preview.scss
@@ -1,5 +1,11 @@
 @import '../../styles/_variables';
 
+
+@mixin size($width, $height: $width) {
+      width: $width;
+      height: $height;
+}
+
 .preview-content{
     a ~ h1:hover,h2:hover {
       text-decoration: underline;
@@ -42,7 +48,6 @@
 		margin-top: 4em;
 		margin-bottom: 1em;
         width: 100%;
-        height: 400px;
         object-fit: cover;
     }
 }
@@ -55,7 +60,11 @@
     .newsitem{
         text-align: center;
         img{
+            width: 675px;
+            height: 405px;
+            max-width: 100%;
             border-radius: 100%;
+            margin: auto;
         }
     }
 
@@ -67,8 +76,18 @@
         }
 		img {
 			margin: 0em;
-			height: auto;
-            border-radius: 100%;
 		}
 	}
+}
+
+@media screen and (max-width: 450px) {
+    .newsitem{
+        text-align: center;
+        img{
+            width: 495px;
+            height: 297px;
+            margin: auto;
+        }
+    }
+
 }
