--- a/src/components/Jumbotron/jumbotron.scss
+++ b/src/components/Jumbotron/jumbotron.scss
@@ -20,10 +20,13 @@
         z-index: -2;
         img{
             filter: blur(2px) brightness(0.9);
-            width: 100%;
-            height: $header-height;
-            object-fit: fill;
+            min-width: 100%;
+            min-height: 100%;
+            max-height: 100%;
+            width: 100vw;
+            object-fit: cover;
             z-index: 1;
+
         }
     }
 
