--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -12,6 +12,7 @@ $accent-color: $grape;
 $light-grey: #e4e4e4;
 
 // Layout
+$header-min-height: 300px;
 $header-height: 380px;
 $footer-max-height: 128px;
 $mobile-edge: 1em; 
