--- a/src/layouts/News/news.scss
+++ b/src/layouts/News/news.scss
@@ -7,12 +7,13 @@
 }
 
 .newsarticle {
+    margin-top: 3em;
     img {
         width: 100%;
+        margin: 1em 0em;
     }
     .ingress {
-        font-size: 0.8em;
-        margin: 20px;
+        font-size: 1.2em;
         text-align: justify;
         font-style: italic;
     }
@@ -26,4 +27,18 @@
     color: $melon;
 }
 
+@media screen and (max-width: $breakpoint-mobile) {
+
+    .newsarticle {
+        max-width: 90vw;
+        margin: 3em 0px 3em 5vw;
+        img {
+            margin-left: -5vw;
+            width: 100vw;
+            max-width: 500px;
+            height: auto;
+        }
+    }
+
+}
 
