--- a/src/components/Newsfeed/newsfeed.scss
+++ b/src/components/Newsfeed/newsfeed.scss
@@ -1,28 +1,12 @@
 @import '../../styles/_variables';
 
 .newsfeed {
-    margin: 2em 0em;
-}
-
-ul.newsfeed {
-    list-style-type: none;
-    padding-left: 0;
-    li {
-        padding-top: 10px;
-        border-bottom: 1px solid;
-        
-    }
-    li.featured {
-
-        img {
-            width: 100%;
-        }
-    }
-    li.regular {
-        img {
-            max-width: 200px;
-            max-height: 100px;
-            margin-right: 10px;
+    margin: 3em 0em 6em 0em;
+    min-height: 100%;
+    ul {
+        li {
+            margin: 1em 0em;
+            min-height: 143px;
         }
     }
 }
@@ -37,6 +21,23 @@ ul.newsfeed {
     border-bottom: 1px solid $melon;
     margin: 2em 0em 5em 0em;
 }
+
+.post {
+    //post item margins should go here if applicable.
+    height: 200px;
+}
+
+@media screen and (max-width: $breakpoint-mobile) {
+    .newsfeed {
+        ul {
+            li {
+                margin: 3em 0em;
+                min-height: 143px;
+            }
+        }
+    }
+}
+
 /*
 @media all and (max-width: $breakpoint-pad) {
     ul.newsfeed {
