about mobile margin fix

--- a/src/layouts/Aboutpage/index.scss
+++ b/src/layouts/Aboutpage/index.scss
@@ -6,3 +6,11 @@
 	margin-top: 3em;
 	margin-bottom: 3em;
 }
+
+@media screen and (max-width: $breakpoint-mobile) {
+
+	.aboutpage-container {
+        margin: 1em 5vw 0em 5vw;
+	}
+      
+}
