--- a/src/components/PageSection/pagesection.scss
+++ b/src/components/PageSection/pagesection.scss
@@ -1,2 +1,21 @@
- 
+@import '../../styles/_variables';
+
+.pagesection {
+    display: flex;
+    flex-direction: row;
+
+    .image{
+        width: 50%;
+        background-color: $licorice;
+        img{
+            width:100%;
+            max-height: 100%;
+        }
+    }
+}
+
+.pagesection-body{
+    width: 50%;
+    padding: 1em;
+}
 
