changes in EventList and some design in PageSection

--- a/src/components/PageSection/pagesection.scss
+++ b/src/components/PageSection/pagesection.scss
@@ -17,5 +17,13 @@
 .pagesection-body{
     width: 50%;
     padding: 1em;
-}
 
+    h1 {
+      font-size: 34px;
+    }
+
+    
+    .title{
+      color : red;
+    }
+}
