Add contacs in bottom of exhibitor info

--- a/src/components/Contacts/contact.scss
+++ b/src/components/Contacts/contact.scss
@@ -34,8 +34,13 @@
   padding-top: 5px;
 }
 
+.light{
+    color: $text-color-light;
+}
+
 .contact-body {
   min-height: 70vh;
+  background-color: $licorice;
 }
 
 .contact-body p {
