--- a/src/components/PageSection/pagesection.scss
+++ b/src/components/PageSection/pagesection.scss
@@ -21,11 +21,13 @@ $text-standard: 1em;
 
     .image {
       width: 50%;
-      background-color: $licorice;
       img {
         width: 100%;
         max-height: 100%;
       }
+    }
+    .dark {
+      background-color: $licorice;
     }
 
     .pagesection.right {
