--- a/src/components/Jumbotron/jumbotron.scss
+++ b/src/components/Jumbotron/jumbotron.scss
@@ -34,12 +34,15 @@
         background-color: $licorice;
         z-index: -2;
         min-width: 100%;
-        min-height: 90%;
-        max-height: 90%;
-        height: 90vh;
+        min-height: 100%;
+        max-height: 100%;
+        height: 100vh;
         width: 100vw;
         overflow:hidden;
         width: 100%;
+
+
+
         img{
             filter: blur(2px) brightness(0.9);
             min-width: 100%;
@@ -69,6 +72,15 @@
     text-align: center;
     height: 65%;
     margin-top: 5px;
+
+
+    .scroll-arrow{
+        max-height: 50px;
+        color: $text-color-light;
+        margin-top: 1em;
+
+        
+    }
 
     img {
         max-height:90%;
