--- a/src/components/Jumbotron/jumbotron.scss
+++ b/src/components/Jumbotron/jumbotron.scss
@@ -91,7 +91,7 @@
 
 
     .scroll-arrow{
-        max-height: 50px;
+        height: 50px;
         color: $text-color-light;
         margin-top: 1em;
         -webkit-animation: pulse 3s infinite ease-in-out;
