--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -96,6 +96,7 @@ a:hover {
 
 
 h1, h2, h3, h4, h5, h6 {
+        text-align: center;
         margin: 0;
         font-family: $font-title;
         color: $melon;
