--- a/src/components/Newsfeed/newsfeed.scss
+++ b/src/components/Newsfeed/newsfeed.scss
@@ -1,7 +1,7 @@
 @import '../../styles/_variables';
 
 .newsfeed {
-    margin: 3em 0em 6em 0em;
+    margin: 3em 1em 6em 1em;  // nytt
     min-height: 100%;
     ul {
         li {
@@ -19,7 +19,7 @@
 .armada-news {
     text-align: center;
     border-bottom: 1px solid $melon;
-    margin: 2em 0em 5em 0em;
+    margin: 2em 1em 5em 1em;
 }
 
 .post {
@@ -29,6 +29,7 @@
 
 @media screen and (max-width: $breakpoint-mobile) {
     .newsfeed {
+       margin: 3em 0em 6em 0em;  // nytt
         ul {
             li {
                 margin: 3em 0em;
@@ -64,4 +65,3 @@
 
 }
 */
-
