small design styling fixes

--- a/src/components/PageSection/pagesection.scss
+++ b/src/components/PageSection/pagesection.scss
@@ -25,6 +25,8 @@
       width: 50%;
       .pagesection-body {
         padding: 1em;
+        max-width: 35em;
+        margin: auto;
 
         h1 {
           font-size: 1.75em;
