padding changes to news

--- a/src/components/Newsfeed/newsfeed.scss
+++ b/src/components/Newsfeed/newsfeed.scss
@@ -2,6 +2,8 @@
 
 .newsfeed {
     margin: 3em 0em 6em 0em;  // nytt
+    //margin: 3em 1em 6em 1em;  // nytt
+
     min-height: 100%;
     ul {
         li {
@@ -19,7 +21,7 @@
 .armada-news {
     text-align: center;
     border-bottom: 1px solid $melon;
-    margin: 2em 1em 5em 1em;
+    margin: 2em 1em 3em 1em;
 }
 
 .post {
