event small updates

--- a/src/components/EventList/eventlist.scss
+++ b/src/components/EventList/eventlist.scss
@@ -2,8 +2,7 @@
 
 .event {
 
-  padding: 1.5em;
-  margin: 5%;
+
 
 }
 
@@ -13,6 +12,13 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  padding: 2em;
+
+}
+.secondary-title {
+
+
+
 
 }
 
@@ -36,14 +42,24 @@ flex-direction: row;
 
 .image-section{
 
-  width: 40%;
+  width: 30%;
   height: 100%;
 
 }
 
 .details-section{
 
-  width: 40%;
+  width: 30%;
   height: 100%;
 
+
+}
+
+hr {
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #ccc;
+  margin: 1em 0;
+  padding: 0;
 }
