--- a/src/components/EventList/eventlist.scss
+++ b/src/components/EventList/eventlist.scss
@@ -48,7 +48,44 @@ flex-direction: row;
 }
 
 .details-section{
-
   width: 30%;
   height: 100%;
+}
+
+
+hr {
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #ccc;
+  margin: 1em 0;
+  padding: 0;
+}
+
+.popup {
+  position: fixed;
+  z-index: 400;
+  top: 50%;
+  left: 50%;
+  margin-top: -20%;
+  margin-left: -20%;
+  width: 40%;
+  height: 40%;
+  border-radius: 10px;
+  background: rgba(255, 255, 255, 0.9);
+  text-align: center;
+  font-size: 30px;
+}
+
+.shade {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.3);
+}
+
+.content {
+  padding: 50px;
 }
