--- a/src/components/EventList/eventlist.scss
+++ b/src/components/EventList/eventlist.scss
@@ -65,13 +65,14 @@ hr {
 .popup {
   position: fixed;
   z-index: 400;
-  top: 50%;
+  top: 10%;
   left: 50%;
-  margin-top: -20%;
-  margin-left: -20%;
-  width: 40%;
-  height: 40%;
-  border-radius: 10px;
+  transform:translate(-50%,-50%);
+  margin-top: 20%;
+  //margin-left: -20%;
+  width: 50%;
+  height: 50%;
+  border-radius: 5px;
   background: rgba(255, 255, 255, 0.9);
   text-align: center;
   font-size: 30px;
@@ -83,9 +84,16 @@ hr {
   right: 0;
   bottom: 0;
   left: 0;
-  background: rgba(0, 0, 0, 0.3);
+  background: rgba(0, 0, 0, 0.4);
 }
 
 .content {
   padding: 50px;
+}
+
+.signature {
+    display: inline-block;
+    padding-top: 2px;
+    border-top: 1px solid $melon;
+    color: $melon;
 }
