--- a/src/components/EventList/eventlist.scss
+++ b/src/components/EventList/eventlist.scss
@@ -88,7 +88,8 @@ flex-direction: row;
 }
 
 .popup {
-  position: fixed;
+  //position: fixed;
+  position: absolute;
   z-index: 400;
   top: 10%;
   left: 50%;
@@ -117,8 +118,10 @@ flex-direction: row;
 .modalcontent {
 
   .modalimage {
-      width: 100%;
-      height: 10px;
+    img{
+      width: 50%;
+      }
+
   }
 }
 
@@ -212,4 +215,3 @@ hr {
   margin: 1em 0;
   padding: 0;
 }
-
