--- a/src/components/EventList/eventlist.scss
+++ b/src/components/EventList/eventlist.scss
@@ -19,14 +19,7 @@
 
 
 }
-.secondary-title {
 
-  text-align: left;
-
-
-
-
-}
 
 .line-spacing{
 
@@ -36,53 +29,63 @@
 }
 
 .event-item {
+    display: flex;
+    flex-direction: row;
+    padding: 2em;
+
+    .date-section{
+
+      width: 10%;
+      height: 100%;
 
 
-display: flex;
-flex-direction: row;
-  padding: 2em;
+    }
+
+    .image-section{
+
+      width: 40%;
+    }
+
+    .details-section{
+       width: 60%;
+
+      .name{
+          text-align: left;
+      }
 
 
+      padding-left: 1em;
+
+      .event-property{
+          display: flex;
+          flex-direction: row;
+
+          .icon{
+              width: 25px;
+              height: 25px;
+          }
+          p{
+              margin: 0 0 0 5px;
+          }
+      }
+
+      h3{
+
+      }
+
+      h4{
 
 
+      }
 
-}
+      h6{
 
-.date-section{
+        overflow: hidden;
 
-  width: 10%;
-  height: 100%;
+        text-overflow: ellipsis;
+      }
 
-
-}
-
-.image-section{
-
-  width: 30%;
-  height: 100%;
-
-}
-
-.details-section{
-
-  width: 40%;
-  height: 100%;
-
-  h3{
-
-  }
-
-  h4{
-
-
-  }
-
-  h6{
-
-    overflow: hidden;
-
-    text-overflow: ellipsis;
-  }
+    }
 
 }
 
