--- a/src/components/EventList/eventlist.scss
+++ b/src/components/EventList/eventlist.scss
@@ -21,13 +21,6 @@
 }
 
 
-.line-spacing{
-
-
-
-
-}
-
 .event-item {
     display: flex;
     flex-direction: row;
@@ -44,6 +37,9 @@
 
       .name{
           text-align: left;
+      }
+      .description {
+        display: none;
       }
 
 
@@ -62,21 +58,6 @@
           }
       }
 
-      h3{
-
-      }
-
-      h4{
-
-
-      }
-
-      h6{
-
-        overflow: hidden;
-
-        text-overflow: ellipsis;
-      }
 
     }
 
@@ -143,79 +124,37 @@
 
 @media screen and (max-width: $breakpoint-mobile) {
 
-
   .events-feed {
 
-    max-width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
     padding: 0%;
 
-
-  }
-  .secondary-title {
-
-    text-align: left;
-
-
-  }
-
-  .line-spacing{
 
 
   }
 
   .event-item {
-
-
     display: flex;
     flex-direction: row;
-    padding: 0%;
-
-
-
-  }
-
-  .date-section{
-
-display: none;
-
-
+    padding: 1em;
   }
 
   .image-section{
 
-    width: 40%;
+    width: auto;
     max-height: 100%;
 
     img{
       width: 100%;
       height: 100%;
     }
-
   }
+.name {
 
-  .details-section{
+  font-size: large;
+}
 
-    width: 40%;
-    height: 100%;
-
-    .description {
-        display: none;
-    }
-
-
-  }
 }
 
 
 
-hr {
-  display: block;
-  height: 1px;
-  border: 0;
-  border-top: 1px solid #ccc;
-  margin: 1em 0;
-  padding: 0;
-}
+
