--- a/src/components/EventList/eventlist.scss
+++ b/src/components/EventList/eventlist.scss
@@ -1,54 +1,38 @@
 @import '../../styles/_variables';
 
 .events {
-
   width: 100%;
   height:100%;
   margin: auto;
-
 }
 
 .events-feed {
-
   max-width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
   padding: 2em;
-
-
-
 }
-
 
 .event-item {
     display: flex;
     flex-direction: row;
     padding: 2em;
-
-
     .image-section{
-
       width: 40%;
     }
-
     .details-section{
        width: 60%;
-
       .name{
           text-align: left;
       }
       .description {
         display: none;
       }
-
-
       padding-left: 1em;
-
       .event-property{
           display: flex;
           flex-direction: row;
-
           .icon{
               width: 25px;
               height: 25px;
@@ -57,14 +41,11 @@
               margin: 0 0 0 5px;
           }
       }
-
-
     }
-
 }
 
 .popup {
-  position: fixed;
+  position: absolute;
   z-index: 400;
   top: 9%;
   left: 50%;
@@ -72,19 +53,24 @@
   width: 45%;
   border-radius: 5px;
   background: rgba(255, 255, 255, 0.9);
-  overflow: auto;
 }
 
 .shade {
   position: fixed;
+  z-index: 350;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
-  background: rgba(0, 0, 0, 0.4);
+  background: rgba(0, 0, 0, 0.6);
 }
-
-
+.shadecontent{
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  text-align: left;
+}
 
 .modalcontent {
 
@@ -93,29 +79,62 @@
       width: 100%;
       }
   }
-  .signature {
-      //display: inline-block;
-      padding-top: 2px;
-      border-top: 1px solid $melon;
-      color: $melon;
-      text-align: left;
+  .modal-event-property{
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      .icon{
+          width: 25px;
+          height: 25px;
+      }
+      p{
+          margin: 0 0 0 5px;
+      }
   }
-
   .modalinfo{
     padding: 1em 1em;
   }
 
   .modalbutton{
     text-align: center;
-  }
+
+    .rsvpbutton{
+      display: inline-block;
+        border-radius: 4px;
+        background-color: $melon;
+        border: none;
+        color: #FFFFFF;
+        text-align: center;
+        font-size: 16px;
+        padding: 20px;
+        transition: all 0.5s;
+        cursor: pointer;
+        margin: 5px;
+      }
+      .rsvpbutton:hover{
+        text-decoration: underline;
+      }
+      .rsvpclosed{
+        display: inline-block;
+          border-radius: 4px;
+          background-color: #f4511e;
+          border: none;
+          color: #FFFFFF;
+          text-align: center;
+          font-size: 16px;
+          padding: 20px;
+          transition: all 0.5s;
+          cursor: pointer;
+          margin: 5px;
+        }
+        .rsvpbutton:hover{
+          text-decoration: underline;
+
+      }
+
+    }
 }
 
-.signature {
-  display: inline-block;
-  padding-top: 2px;
-  border-top: 1px solid $melon;
-  color: $melon;
-}
 
 
 
@@ -153,8 +172,15 @@
   font-size: large;
 }
 
+.popup {
+  position: absolute;
+  z-index: 400;
+  top: 9%;
+  left: 50%;
+  transform:translate(-50%);
+  width: 60%;
+  border-radius: 5px;
+  background: rgba(255, 255, 255, 0.9);
 }
 
-
-
-
+}
