--- a/src/components/EventList/eventlist.scss
+++ b/src/components/EventList/eventlist.scss
@@ -4,6 +4,8 @@
   width: 100%;
   height:100%;
   margin: auto;
+  //overflow: scroll;
+
 }
 
 .events-feed {
@@ -27,7 +29,7 @@
           text-align: left;
       }
       .description {
-        display: none;
+        //display: none;
       }
       padding-left: 1em;
       .event-property{
@@ -44,15 +46,26 @@
     }
 }
 
+.popupcontainer{
+  position: fixed;
+  top: 3em;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  overflow: auto;
+}
+
 .popup {
-  position: absolute;
+  position: relative;
   z-index: 400;
-  top: 9%;
+  top: 0;
   left: 50%;
   transform:translate(-50%);
-  width: 45%;
+  width: 50%;
   border-radius: 5px;
   background: rgba(255, 255, 255, 0.9);
+  margin-bottom: 3em;
+  padding-bottom: 1em;
 }
 
 .shade {
@@ -62,7 +75,17 @@
   right: 0;
   bottom: 0;
   left: 0;
-  background: rgba(0, 0, 0, 0.6);
+  background: rgba(0, 0, 0, 0.8);
+  .close{
+    position: absolute;
+    top: 1em;
+    right: 2em;
+    .cross{
+      color: $text-color-light;
+    }
+
+  }
+
 }
 .shadecontent{
   top: 0;
@@ -73,6 +96,8 @@
 }
 
 .modalcontent {
+  overflow-wrap: break-word;
+  text-align: justify;
 
   .modalimage {
     img{
@@ -87,6 +112,13 @@
           width: 25px;
           height: 25px;
       }
+      .icon_group{
+        text-align: center;
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+      }
+
       p{
           margin: 0 0 0 5px;
       }
@@ -129,7 +161,6 @@
         }
         .rsvpbutton:hover{
           text-decoration: underline;
-
       }
 
     }
@@ -137,18 +168,10 @@
 
 
 
-
-
-
-
 @media screen and (max-width: $breakpoint-mobile) {
 
   .events-feed {
-
     padding: 0%;
-
-
-
   }
 
   .event-item {
@@ -158,29 +181,31 @@
   }
 
   .image-section{
-
     width: auto;
     max-height: 100%;
-
     img{
       width: 100%;
       height: 100%;
     }
   }
-.name {
+  .name {
+    font-size: large;
+  }
 
-  font-size: large;
-}
+  .popup {
+    width: 80%;
+  }
 
-.popup {
-  position: absolute;
-  z-index: 400;
-  top: 9%;
-  left: 50%;
-  transform:translate(-50%);
-  width: 60%;
-  border-radius: 5px;
-  background: rgba(255, 255, 255, 0.9);
-}
+  .modalcontent {
+
+
+    .modal-event-property{
+        flex-direction: column;
+        .icon_group{
+          flex-direction: row;
+        }
+      }
+
+    }
 
 }
