cross to close event modal on mobile moved

--- a/src/components/EventList/eventlist.scss
+++ b/src/components/EventList/eventlist.scss
@@ -209,4 +209,14 @@
         }
       }
     }
+    .shade {
+      .shadecontent{
+        position: absolute;
+        top: 0px;
+        right: 5px;
+        .cross{
+          color: $text-color-light;
+        }
+      }
+    }
 }
