--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -15,7 +15,7 @@ $light-grey: #e4e4e4;
 $header-min-height: 300px;
 $header-height: 380px;
 $footer-max-height: 128px;
-$mobile-edge: 1em; 
+$mobile-edge: 1em;
 
 
 // Animation
@@ -24,3 +24,4 @@ $transition-duration: 300ms;
 // Breakpoints
 $breakpoint-pad: 768px;
 $breakpoint-mobile: 470px;
+$breakpoint-mobile-flipped: 850px;
